--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
   align-items: center;
 
   background-color: #1f1f1f;
-  padding: 2rem;
+  padding: 1.2rem 2rem;
   border-radius: 1.2rem;
 }
 
